<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="watch">Смотреть</string>
	<string name="description_title">Описание</string>
	<string name="description_placeholder">Eliot is in his happy place, unaware that he is being possessed by the Monster. To have control over his body, Eliot must travel to the place that contains his greatest regret: turning down Quentin when he suggests he and Eliot should be together after their memories are restored of their life in past-Fillory, happily living together and raising a family.</string>
	<string name="shots_title">Кадры</string>
	<string name="episodes_title">Эпизоды</string>
	<string name="tag_placeholder">Фэнтези</string>
	<string name="episode_name_placeholder">Нелегальная магия</string>
	<string name="year_placeholder">2077</string>


	<string name="age_18">18+</string>
	<string name="age_16">16+</string>
	<string name="age_12">12+</string>
	<string name="age_6">6+</string>
	<string name="age_0">0+</string>
</resources>