<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/black">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/coverImageView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:scaleType="fitCenter"
			android:src="@color/gray"
			app:layout_constraintDimensionRatio=""
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/watchButton"
			style="@style/Button.Primary"
			android:layout_width="wrap_content"
			android:layout_marginBottom="32dp"
			android:paddingHorizontal="32dp"
			android:text="@string/watch"
			app:layout_constraintBottom_toBottomOf="@+id/coverImageView"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />

		<ImageView
			android:id="@+id/backButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="20dp"
			android:layout_marginTop="20dp"
			android:background="@android:color/transparent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/arrow_back" />

		<ImageButton
			android:id="@+id/commentsButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="18dp"
			android:layout_marginTop="18dp"
			android:background="@android:color/transparent"
			android:scaleType="centerCrop"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/coverImageView"
			app:srcCompat="@drawable/comments" />

		<TextView
			android:id="@+id/ageTextView"
			style="@style/TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:text="@string/age_18"
			android:textColor="@color/orange"
			android:textSize="14sp"
			app:layout_constraintBottom_toBottomOf="@+id/commentsButton"
			app:layout_constraintEnd_toStartOf="@+id/commentsButton"
			app:layout_constraintTop_toTopOf="@+id/commentsButton" />

		<com.google.android.flexbox.FlexboxLayout
			android:id="@+id/tagsFlexBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="12dp"
			android:layout_marginStart="12dp"
			android:layout_marginTop="25dp"
			app:alignItems="center"
			app:flexWrap="wrap"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/ageTextView"></com.google.android.flexbox.FlexboxLayout>

		<TextView
			android:id="@+id/descriptionTitleTextView"
			style="@style/TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="32dp"
			android:text="@string/description_title"
			android:textColor="@color/white"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tagsFlexBox" />

		<TextView
			android:id="@+id/descriptionTextView"
			style="@style/TextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/description_placeholder"
			android:textColor="@color/white"
			android:textSize="14sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/descriptionTitleTextView"
			app:layout_constraintTop_toBottomOf="@+id/descriptionTitleTextView" />

		<TextView
			android:id="@+id/shotsTitleTextView"
			style="@style/TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/shots_title"
			android:textColor="@color/white"
			app:layout_constraintStart_toStartOf="@+id/descriptionTitleTextView"
			app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/shotsRecyclerView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="8dp"
			android:layout_marginTop="17dp"
			android:orientation="horizontal"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/shotsTitleTextView"
			tools:listitem="@layout/shot_item">

		</androidx.recyclerview.widget.RecyclerView>

		<TextView
			android:id="@+id/episodesTitleTextView"
			style="@style/TextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/episodes_title"
			android:textColor="@color/white"
			app:layout_constraintStart_toStartOf="@+id/descriptionTitleTextView"
			app:layout_constraintTop_toBottomOf="@+id/shotsRecyclerView" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/episodesRecyclerView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="17dp"
			android:orientation="vertical"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/episodesTitleTextView" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>